# agentflow

./: README.md  api.py  cli.py  main.py  pyproject.toml
dashboard/: package-lock.json
dashboard/public/: results.json
dashboard/src/: App.css  App.jsx  index.css
runtime/apps/: app.py  calendar_app.py  contacts_app.py  document_store.py  email_app.py
runtime/core/: agent.py  app.py  app_registry.py  config.py  environment.py  event.py  runner.py  scenario.py  utils.py  verifier.py
runtime/scenarios/: test.yaml
scenarios/: client_onboarding.yaml  contract_review.yaml  email_triage.yaml  inbox_cleanup.yaml  invoice_generation.yaml  meeting_preparation.yaml  schedule_from_email.yaml
