[project]
name = "agentflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.1",
    "langchain>=1.3.13",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "unicorn>=2.1.4",
    "uvicorn>=0.51.0",
]
